# nn-keras-tf

./: README.md  hello_tensorflow.py  nnxor.py  pyproject.toml  tensorflow_mult.py
